fix: allow long links to wrap for small screens

--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -110,6 +110,7 @@
 
       a {
         text-decoration: underline;
+        word-wrap: break-word;
       }
 
       & + pre {
